[Fix #639] Renamed color-yiq() function to color-contrast()

--- a/src/styles/core/mixins/_badge.scss
+++ b/src/styles/core/mixins/_badge.scss
@@ -4,7 +4,7 @@
 
   &[href] {
     @include hover-focus {
-      color: color-yiq($bg);
+      color: color-contrast($bg);
       text-decoration: none;
       background-color: darken($bg, 10%);
     }
