--- a/src/styles/core/mixins/_buttons.scss
+++ b/src/styles/core/mixins/_buttons.scss
@@ -6,13 +6,13 @@
   $active-background: darken($background, 10%),
   $active-border: darken($border, 0%)
 ) {
-  color: color-yiq($background);
+  color: color-contrast($background);
   @include gradient-bg($background);
   border-color: $border;
   @include box-shadow($btn-box-shadow);
 
   &:hover {
-    color: color-yiq($hover-background);
+    color: color-contrast($hover-background);
     @include gradient-bg($hover-background);
     border-color: $hover-border;
   }
@@ -28,7 +28,7 @@
   } // Disabled comes first so active can properly restyle
   &.disabled,
   &:disabled {
-    color: color-yiq($background);
+    color: color-contrast($background);
     background-color: $background;
     border-color: $border;
   }
@@ -36,7 +36,7 @@
   &:not(:disabled):not(.disabled):active,
   &:not(:disabled):not(.disabled).active,
   .show > &.dropdown-toggle {
-    color: color-yiq($active-background);
+    color: color-contrast($active-background);
     background-color: $active-background;
     @if $enable-gradients {
       background-image: none; // Remove the gradient for the pressed/active state
@@ -57,7 +57,7 @@
 
 @mixin button-outline-variant(
   $color,
-  $color-hover: color-yiq($color),
+  $color-hover: color-contrast($color),
   $active-background: $color,
   $active-border: $color
 ) {
@@ -86,7 +86,7 @@
   &:not(:disabled):not(.disabled):active,
   &:not(:disabled):not(.disabled).active,
   .show > &.dropdown-toggle {
-    color: color-yiq($active-background);
+    color: color-contrast($active-background);
     background-color: $active-background;
     border-color: $active-border;
 
