--- a/src/styles/custom/_mixins.scss
+++ b/src/styles/custom/_mixins.scss
@@ -25,12 +25,12 @@
   $active-background: darken($background, 10%),
   $active-border: darken($border, 0%)
 ) {
-  color: color-yiq($background);
+  color: color-contrast($background);
   @include gradient-bg($background);
   @include box-shadow($btn-box-shadow);
 
   &:hover {
-    color: color-yiq($hover-background);
+    color: color-contrast($hover-background);
     @include gradient-bg(lighten($hover-background, 10%));
   }
 
@@ -46,7 +46,7 @@
   // Disabled comes first so active can properly restyle
   &.disabled,
   &:disabled {
-    color: color-yiq($background);
+    color: color-contrast($background);
     background-color: $background;
     border-color: $border;
   }
@@ -54,7 +54,7 @@
   &:not(:disabled):not(.disabled):active,
   &:not(:disabled):not(.disabled).active,
   .show > &.dropdown-toggle {
-    color: color-yiq($hover-background);
+    color: color-contrast($hover-background);
     @include gradient-bg(lighten($hover-background, 10%));
     @if $enable-gradients {
       background-image: none; // Remove the gradient for the pressed/active state
